--- a/practica1/src/main/resources/templates/layouts/app.html
+++ b/practica1/src/main/resources/templates/layouts/app.html
@@ -7,11 +7,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
-    <title>Document</title>
+    <title layout:title-pattern="$CONTENT_TITLE - Prueba">Prueba app</title>
 </head>
 
 <body>
-    <nav th:replace="~{layouts/fragments/navegation :: navegation}"></nav>
+    <!--<nav th:replace="~{layouts/fragments/navegation :: navegation}"></nav> -->
+    <th:block th:replace="~{layouts/fragments/navegation :: navegation}"></th:block>
+
+
+    <div th:text="${currentUri}">
+
+    </div>
 
     <main layout:fragment="content">
 
@@ -21,6 +27,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
         </script>
+
+    <th:block layout:fragment="js"></th:block> <!-- precargar y ejecutar scripts -->
 </body>
 
 </html>
