--- a/practica1/src/main/resources/templates/users/update.html
+++ b/practica1/src/main/resources/templates/users/update.html
@@ -10,31 +10,42 @@
 <body>
 
     <main layout:fragment="content">
+        <h1>Actualización de usuario</h1>
+        <form class="card" th:action="@{/users/update/{id}(id=${userId})}" method="post" th:object="${userDTO}">
 
-        <form class="card" action="/users" method="post" th:object="${userDto}">
-            <div class="alert alert-danger" role="alert" th:if="${#fields.hasErrors()}">
-                <p>
-                    Hubo problemas de validación
-                </p>
+            <div class="alert alert-danger" th:if="${#fields.hasErrors()}">
+                <p>Hubo problemas de validación</p>
                 <ul>
                     <li th:each="error : ${#fields.errors('*')}" th:text="${error}"></li>
                 </ul>
             </div>
+
             <div class="card-body">
+
+                <div class="mb-3">
+                    <label class="form-label">Usuario: # [[${userId}]]</label>
+                </div>
+
                 <div class="mb-3">
                     <label class="form-label">Nombre</label>
-                    <input type="text" name="name" th:value="*{name}"  class="form-control"  th:classappend="${#fields.hasErrors('name') ? 'is-invalid' : ''}">
-                    <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="text-danger"></div>
+                    <input type="text" th:field="*{name}" class="form-control"
+                        th:classappend="${#fields.hasErrors('name')} ? 'is-invalid' : ''">
+                    <div th:errors="*{name}" class="text-danger"></div>
                 </div>
+
                 <div class="mb-3">
                     <label class="form-label">Email</label>
-                    <input type="text" name="email" th:field="*{email}" class="form-control" th:classappend="${#fields.hasErrors('email') ? 'is-invalid' : ''}">
-                    <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-danger"></div>
-
+                    <input type="text" th:field="*{email}" class="form-control"
+                        th:classappend="${#fields.hasErrors('email')} ? 'is-invalid' : ''">
+                    <div th:errors="*{email}" class="text-danger"></div>
                 </div>
-                <button class="btn btn-primary" type="submit">Crear usuario</button>
+
+                <button class="btn btn-primary" type="submit">
+                    Actualizar usuario
+                </button>
             </div>
         </form>
+
     </main>
 
 </body>
